# vectis-authenticators

./: .gitignore  README.md
webauthn/: Cargo.toml  README.md
webauthn/examples/: schema.rs
webauthn/schema/: ptd-webauthn-authenticator.json  vectis-webauthn-authenticator.json
webauthn/schema/raw/: execute.json  query.json
webauthn/src/: contract.rs  lib.rs  test.rs  types.rs
