[package]
name = "vectis-webauthn-authenticator"
version = "1.0.0-rc1"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
mt = ["sylvia/mt"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.00
"""

[dependencies]
cosmwasm-std = { version = "1.2", features = ["iterator", "ibc3", "staking", "cosmwasm_1_2"] }
cosmwasm-storage = "1.2" 
cosmwasm-schema = "1.2" 
sylvia = "0.7.0"
sylvia-derive = "0.7.0"
cw2 = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
sha2 = "0.9"
ripemd160 = "0.9.1"
p256 = {version = "0.13.2", default-features = false, features = ["alloc", "ecdsa"]}
vectis-wallet = { path = "../../../packages/vectis" }
base64ct = {version = "1.6.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
sylvia = { version =  "0.7.0", features = ["mt"]}
