[package]
name = "vectis-webauthn-authenticator"
version = "1.0.0-rc1"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
mt = ["sylvia/mt"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.00
"""

[dependencies]
cosmwasm-std = { workspace = true } 
cosmwasm-storage = { workspace = true } 
cosmwasm-schema  = { workspace = true }
sylvia  = { workspace = true }
sylvia-derive  = { workspace = true }
cw2  = { workspace = true }
serde  = { workspace = true }
serde-json-wasm  = { workspace = true }
sha2  = { workspace = true }
ripemd160  = { workspace = true }
p256 = {version = "0.13.2", default-features = false, features = ["alloc", "ecdsa"]}
vectis-wallet = { path = "../../../packages/vectis" }
base64ct = {version = "1.6.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
sylvia = {version = "0.8.1", features = ["mt"]}
