[package]
name = "ptd-webauthn-authenticator"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
mt = ["sylvia/mt"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.00
"""

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema  = { workspace = true }
sylvia  = { workspace = true }
sylvia-derive  = { workspace = true }
cw2  = { workspace = true }
serde  = { workspace = true }
serde-json-wasm  = { workspace = true }
sha2  = { workspace = true }
p256 = {version = "0.13.2", default-features = false, features = ["alloc", "ecdsa"]}
ptd-interfaces = { path = "../../../interfaces" }

[dev-dependencies]
sylvia = { workspace = true, features = ["mt"] }
